# hotel-os

./: .env.example  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  run_services.py  test_scenarios.py
alembic/: env.py
alembic/versions/: 35383d688092_add_tables.py  59bf2859f6a3_add_users_table.py  7e63622db7df_add_passport_id_to_guests.py  b7f745a3546f_add_passport_id_to_guests.py  d31ea5982de5_add_tables.py  df614cc7a918_initial_schema.py  fb94fe550704_add_passport_id_to_guests.py
app/: __init__.py
app/core/: auth.py  broker.py  config.py
app/db/: database.py  engine.py  memory_db.py  models.py
app/schemas/: booking_schemas.py  enums.py  events.py  guest_schemas.py  maintenance_schemas.py  order_schemas.py
frontend/: .pnpm-approve-builds  README.md  index.html  package.json  pnpm-workspace.yaml  script.js  style.css  vite.config.ts
frontend-v/: index.html  script.js  style.css
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/app/components/: Analytics.tsx  Dashboard.tsx  GuestPortal.tsx  Header.tsx  Housekeeping.tsx  KitchenDisplay.tsx  LiveFeed.tsx  LoginPage.tsx  Maintenance.tsx  Reception.tsx  Settings.tsx  Sidebar.tsx  mockData.ts  types.ts
frontend/src/contexts/: AuthContext.tsx
services/auth/: main.py
services/housekeeping/: main.py  router.py  schemas.py
services/maintenance/: main.py  router.py  schemas.py
services/reception/: main.py  router.py  schemas.py
services/room_service/: main.py  router.py  schemas.py
services/websocket_gateway/: main.py  router.py
